--- a/platform-api/composer.json
+++ b/platform-api/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "africastalking/africastalking": "^3.0",
+        "barryvdh/laravel-dompdf": "^3.1",
         "doctrine/dbal": "^4.4",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.4.0",
@@ -15,7 +17,8 @@
         "laravel/tinker": "^2.10.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^4.11",
-        "spatie/laravel-permission": "^6.24"
+        "spatie/laravel-permission": "^6.24",
+        "twilio/sdk": "^8.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
